--- a/.drone.yml
+++ b/.drone.yml
@@ -9,6 +9,8 @@ pipeline:
       - git submodule update
       - ./autogen.sh
       - ./configure --with-pmgr
+      - make
+      - make deb
   build-ubuntu:
     group: build
     image: pexeso/pexeso-build-ubuntu:16.04
@@ -19,3 +21,5 @@ pipeline:
       - git submodule update
       - ./autogen.sh
       - ./configure --with-pmgr
+      - make
+      - make deb
