--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ pipeline:
       - make deb
       - mkdir -p proto/debian/
       - mv ../*.deb proto/debian/
-      - ls lR proto
+      - ls -lR proto
       - dpkg -c proto/debian/*.deb
   build-ubuntu:
     image: pexeso/pexeso-build-ubuntu:16.04
