Document default value for pmgr.workers

--- a/etc/pmgr.ini
+++ b/etc/pmgr.ini
@@ -30,10 +30,12 @@ default_pool_size = 20
 ; Default: 0
 enabled = 1
 
-; How many workers will process manager create
+; How many workers will process manager create. When 0 is specified, the number
+; of worker processes will be equal to the number of available CPUs. If unable
+; to determine number of CPUs only one worker will be used.
 ;
-; Default: 2
-workers = 8
+; Default: 0
+workers = 4
 
 ; Each worker is assigned a port starting at this value.
 ; 
