fixed configure script

--- a/configure.ac
+++ b/configure.ac
@@ -58,19 +58,22 @@ dnl Check for multiprocessing support
 smp_support=yes
 AC_ARG_WITH(smp,
   AC_HELP_STRING([--with-smp],[Enable multiprocessing]),
-  [ SMP=
-    if test "$withval" != no; then
-        have_pthreads=no
-        AC_CHECK_HEADERS(pthread.h, [have_pthreads=yes])
-        AC_SEARCH_LIBS(pthread_create, pthread, [], [have_pthreads=no])
-        if test x"${have_pthreads}" != xyes; then
-           AC_MSG_ERROR([pthread library should be available for smp support])
-        else
-           smp_support=yes
-           AC_DEFINE(HAVE_SMP, 1, [smp support])
-        fi
+  [ if test "$withval" == no; then
+      smp_support=no
     fi
   ], [])
+
+if test "$smp_support" = "yes"; then
+  have_pthreads=no
+  AC_CHECK_HEADERS(pthread.h, [have_pthreads=yes])
+  AC_SEARCH_LIBS(pthread_create, pthread, [], [have_pthreads=no])
+  if test x"${have_pthreads}" != xyes; then
+    AC_MSG_ERROR([pthread library should be available for smp support])
+  else
+    smp_support=yes
+    AC_DEFINE(HAVE_SMP, 1, [smp support])
+  fi
+fi
 
 dnl Check for PAM authorization support
 pam_support=no
