--- a/etc/smp.ini
+++ b/etc/smp.ini
@@ -9,7 +9,7 @@ logfile = pgbouncer.log
 listen_addr = 127.0.0.1
 listen_port = 6432
 
-; unix_socket_dir must be configured when using pmgr
+; unix_socket_dir must be configured when using SMP
 unix_socket_dir = /tmp
 
 ; any, trust, plain, crypt, md5
@@ -23,11 +23,11 @@ pool_mode = session
 max_client_conn = 100
 default_pool_size = 20
 
-[pmgr]
+[smp]
 
 ; Turns on process manager
 ;
-; Default: 0
+; Default: 1
 enabled = 1
 
 ; How many workers will process manager create. When 0 is specified, the number
